Tweak CSS to align settings better (issue #829)

--- a/css/settings.css
+++ b/css/settings.css
@@ -35,6 +35,15 @@
     padding: 2px 2px 2px 10px;
 }
 
+#app-settings-content label {
+    display: block;
+    padding-left: 20px;
+}
+
+#app-settings-content label input[type="checkbox"] {
+    margin-left: -20px;
+}
+
 .button-icon-label {
     background-position: 10px center;
     background-size: 16px;
